objects/Goal_Template_Detail_Measurement_Period__c.object
<CustomObject>
    <fields>
        <fullName>Counter_Id__c</fullName>
        <displayFormat>GTDMP-{0}</displayFormat>
        <label>Counter Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Goal_Template_Detail__c</fullName>
        <label>Goal Template Detail</label>
        <referenceTo>Standard_Goal_Detail__c</referenceTo>
        <relationshipLabel>Goal Template Detail Measurement Periods</relationshipLabel>
        <relationshipName>Goal_Template_Detail_Measurement_Periods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Measurement_Date__c</fullName>
        <label>Measurement Date</label>
        <type>Date</type>
    </fields>
    <label>Goal Template Detail Measurement Period</label>
    <nameField>
        <label>Goal Template Detail Measurement Periods</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goal Template Detail Measurement Periods</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>Every record starts here</description>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>